--- a/index.html
+++ b/index.html
@@ -1,10 +1,64 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Github Page</title>
-  </head>
-  
-  <body>
-    <p>hello</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Jonathan Barclay</title>
+  <meta name="description" content="Jonathan Barclay Resume">
+  <meta name="keywords" content="Jon Barclay, Jonathan Barclay, jtbarclay">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/custom.css">
+  <link rel="icon" href="images/favicon.ico">
+
+</head>
+<body>
+
+	<div class="section hobbies">
+		<div class="container">
+			<div class="row">
+				<div class="resume-section">
+					<h2>Hobbies and Interests</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="one-third column hobby">
+					<h5 class="hobbies-heading">Skiing</h5>
+					<p class="hobbies-description">Spending an afternoon at my local hill, regional weekend trips, or a week in the Rockies.</p>
+				</div>
+				<div class="one-third column hobby">
+					<h5 class="hobbies-heading">Pickling and Canning</h5>
+					<p class="hobbies-description">Preserving the cucumbers, beets, and garlic from my garden, or making a batch of my highly sought after hot sauce.</p>
+				</div>
+				<div class="one-third column hobby">
+					<h5 class="hobbies-heading">3D Printing and Electronics</h5>
+					<p class="hobbies-description">From soldering together components in a 3D printed case, for a handheld gaming system, to prototyping a circular sock knitting machine.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="section awards">
+		<div class="container">
+			<div class="row">
+				<div class="resume-section">
+					<h2>Awards and Achievements</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="one-half column award">
+					<h5 class="awards-heading">Eagle Scout</h5>
+					<p class="awards-presenter">The Boy Scouts of America</p>
+				</div>
+				<div class="one-half column award">
+					<h5 class="awards-heading">Award of Merit</h5>
+					<p class="awards-presenter">Minnesota Public Safety Service Awards Committee</p>
+				</div>
+			</div>
+			</div>
+		</div>
+	</div>
+
+</body>
 </html>
