--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Jonathan Barclay</title>
-  <meta name="description" content="Jonathan Barclay Resume">
-  <meta name="keywords" content="Jon Barclay, Jonathan Barclay, jtbarclay">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/custom.css">
-  <link rel="icon" href="images/favicon.ico">
+	<meta charset="utf-8">
+	<title>Jonathan Barclay</title>
+	
+	<!-- preview text -->
+	<meta name="description" content="Jonathan Barclay Resume">
+	
+	<!-- search engine keywords -->
+	<meta name="keywords" content="Jon Barclay, Jonathan Barclay, jtbarclay">
+	
+	<!-- formatting for mobile -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<!-- loading font from google for skeleton -->
+	<link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+	
+	<!-- linking skeleton css sheets and my custom sheet -->
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/skeleton.css">
+	<link rel="stylesheet" href="css/custom.css">
+	
+	<!-- favicon -->
+	<link rel="icon" href="images/favicon.ico">
 
 </head>
 <body>
-
+	<!-- Hobbies section 3 wide -->
 	<div class="section hobbies">
 		<div class="container">
 			<div class="row">
@@ -39,6 +51,7 @@
 		</div>
 	</div>
 
+	<!-- Awards section 2 wide -->
 	<div class="section awards">
 		<div class="container">
 			<div class="row">
