added employment history
also some class changes

--- a/index.html
+++ b/index.html
@@ -26,14 +26,154 @@
 
 </head>
 <body>
-	<!-- Hobbies section 3 wide -->
-	<div class="section hobbies">
+
+	<!-- header -->
+	<div class="section hellomyname">
 		<div class="container">
 			<div class="row">
-				<div class="resume-section">
-					<h2>Hobbies and Interests</h2>
+				<div class="hello">
+					<b>HELLO</b>
 				</div>
 			</div>
+			<div class="row">
+				<div class="myname">
+					<p>my name is</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="section">
+		<div class="container name">
+			<div class="row">
+				<h1>Jonathan Barclay</h1>
+				<a href="mailto:my@nameisjon.com">my@nameisjon.com</a><br>
+				<a href="https://mynameisjon.com">mynameisjon.com</a>
+			</div>
+		</div>
+	</div>
+
+	<!-- Employment section -->
+	<div class="section">
+		<div class="container employment">
+			<!-- header -->
+			<div class="row">
+				<div class="resume-section">
+					<h3>Employment History</h3>
+				</div>
+			</div>
+			<!-- content -->
+			<div class="row">
+				<div class="job-company">
+					<h4>Wisconsin Wire Cloth</h4>
+				</div>
+			</div>
+			<div class="row">
+				<!-- using columns to indent sections working as intended -->
+				<div class="one column"></div>
+				<div class="eleven column">
+					<h5 class="job-title">Machine Operator</h5>
+					<p>September 2016 - Current</p>
+				</div>
+			</div>
+			<div class="row">
+				<!-- not working -->
+				<div class="two column"></div>
+				<div class="ten column">
+					<div class="job-description">
+						<ul>
+							<li>Cross trained in all aspects of production from raw materials to finished goods.</li>
+							<li>Receive customer orders and retrieve needed material with forklift.</li>
+							<li>Change out die wheels and setup machine to crimp wires to spec.</li>
+							<li>Thread up looms with crimped wires and weave raw screens performing QA checks throughout weaving process.</li>
+							<li>Maintain open communication while working as a two person team, ensuring a tight tolerance, while trimming raw screens to final size using a hydraulic shear, and bending hooks with 250 ton press brake.</li>
+							<li>Package final product for shipping.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="job-company">
+					<h3>Vail Resorts</h3>
+				</div>
+			</div>
+			<div class="row">
+				<!-- using columns to indent sections working as intended -->
+				<div class="one column"></div>
+				<div class="eleven column">
+					<h5 class="job-title">Lifts Supervisor - Afton Alps</h5>
+					<p>November 2012 - January 2014</p>
+					<p>November 2015 - March 2016</p>
+				</div>
+			</div>
+			<div class="row">
+				<!-- not working -->
+				<div class="two column"></div>
+				<div class="ten column">
+					<div class="job-description">
+						<ul>
+							<li>Worked as a team to help train and manage 100-150 lift operators throughout the season, acting as a liaison between management and employees.</li>
+							<li>Responsible for placing and maintaining safety signs, lift tower pads, and boundary fencing.</li>
+							<li>Communicated with front office to redirect personnel, opening and closing lifts, according to need as customer numbers fluctuated.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<!-- using columns to indent sections working as intended -->
+				<div class="one column"></div>
+				<div class="eleven column">
+					<h5 class="job-title">Scanning Team Lead - Breckenridge</h5>
+					<p>April 2014</p>
+					<p>October 2014 - April 2015</p>
+				</div>
+			</div>
+			<div class="row">
+				<!-- not working -->
+				<div class="two column"></div>
+				<div class="ten column">
+					<div class="job-description">
+						<ul>
+							<li>Provided front line customer service and loss prevention while maintaining the highest departmental customer reviews at the busiest ski resort in North America.</li>
+							<li>Assisted ticket office resolving problems with customer products.</li>
+							<li>Worked with local PD identifying fraudulent pass use.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<!-- using columns to indent sections working as intended -->
+				<div class="one column"></div>
+				<div class="eleven column">
+					<h5 class="job-title">Scanning Supervisor - Afton Alps</h5>
+					<p>January 2014 - March 2014</p>
+				</div>
+			</div>
+			<div class="row">
+				<!-- not working -->
+				<div class="two column"></div>
+				<div class="ten column">
+					<div class="job-description">
+						<ul>
+							<li>Joined the team part way into its first year, helped to address problems resulting from adapting a process developed at mountain resorts to a small midwestern location.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Hobbies section 3 wide -->
+	<div class="section">
+		<div class="container hobbies">
+			<!-- header -->
+			<div class="row">
+				<div class="resume-section">
+					<h3>Hobbies and Interests</h3>
+				</div>
+			</div>
+			<!-- content -->
 			<div class="row">
 				<div class="one-third column hobby">
 					<h5 class="hobbies-heading">Skiing</h5>
@@ -52,13 +192,15 @@
 	</div>
 
 	<!-- Awards section 2 wide -->
-	<div class="section awards">
-		<div class="container">
+	<div class="section">
+		<div class="container awards">
+			<!-- header -->
 			<div class="row">
 				<div class="resume-section">
-					<h2>Awards and Achievements</h2>
+					<h3>Awards and Achievements</h3>
 				</div>
 			</div>
+			<!-- content -->
 			<div class="row">
 				<div class="one-half column award">
 					<h5 class="awards-heading">Eagle Scout</h5>
