--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
 					<p class="hobbies-description">Preserving the cucumbers, beets, and garlic from my garden, or making a batch of my highly sought after hot sauce.</p>
 				</div>
 				<div class="one-third column hobby">
+					<!-- weird font issue with 3D -->
 					<h5 class="hobbies-heading">3D Printing and Electronics</h5>
 					<p class="hobbies-description">From soldering together components in a 3D printed case, for a handheld gaming system, to prototyping a circular sock knitting machine.</p>
 				</div>
