github and linkedin logos and links

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 				<a href="mailto:my@nameisjon.com">my@nameisjon.com</a><br>
 				<a href="https://mynameisjon.com">mynameisjon.com</a>
 			</div>
+			<div class="row logos">
+				<a href="https://github.com/jtbarclay"><img src="./images/GitHub-Mark-120px-plus.png" alt="github logo"></a>
+				<a href="www.linkedin.com/in/jtbarclay"><img src="./images/LI-In-Bug.png" alt="linkedin logo"></a>
+			</div>
 		</div>
 	</div>
 
