--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<title>Jonathan Barclay</title>
-	
+
 	<!-- preview text -->
 	<meta name="description" content="Jonathan Barclay Resume">
-	
+
 	<!-- search engine keywords -->
 	<meta name="keywords" content="Jon Barclay, Jonathan Barclay, jtbarclay">
-	
+
 	<!-- formatting for mobile -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
 	<!-- loading font from google for skeleton -->
 	<link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-	
+
 	<!-- linking skeleton css sheets and my custom sheet -->
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/skeleton.css">
 	<link rel="stylesheet" href="css/custom.css">
-	
+
 	<!-- favicon -->
 	<link rel="icon" href="images/favicon.ico">
 
 </head>
+
 <body>
 
 	<!-- header -->
@@ -42,7 +44,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="section">
 		<div class="container name">
 			<div class="row">
@@ -51,7 +53,8 @@
 				<a href="https://mynameisjon.com">mynameisjon.com</a>
 			</div>
 			<div class="row logos">
-				<a href="https://github.com/jtbarclay"><img src="./images/GitHub-Mark-120px-plus.png" alt="github logo"></a>
+				<a href="https://github.com/jtbarclay"><img src="./images/GitHub-Mark-120px-plus.png"
+						alt="github logo"></a>
 				<a href="www.linkedin.com/in/jtbarclay"><img src="./images/LI-In-Bug.png" alt="linkedin logo"></a>
 			</div>
 		</div>
@@ -67,6 +70,33 @@
 				</div>
 			</div>
 			<!-- content -->
+
+			<div class="row">
+				<div class="job-company">
+					<h4>Prime Digital Academy</h4>
+				</div>
+			</div>
+			<div class="row">
+				<!-- using columns to indent sections working as intended -->
+				<div class="one column"></div>
+				<div class="eleven column">
+					<h5 class="job-title">Full Stack Engineering Student</h5>
+					<p>September 2016 - Current</p>
+				</div>
+			</div>
+			<div class="row">
+				<!-- not working -->
+				<div class="two column"></div>
+				<div class="ten column">
+					<div class="job-description">
+						</br>
+						<p>Completed a 20 week immersive program culminating in a solo project and a group project for a
+							real world client.</p>
+						</br>
+					</div>
+				</div>
+			</div>
+
 			<div class="row">
 				<div class="job-company">
 					<h4>Wisconsin Wire Cloth</h4>
@@ -85,18 +115,15 @@
 				<div class="two column"></div>
 				<div class="ten column">
 					<div class="job-description">
-						<ul>
-							<li>Cross trained in all aspects of production from raw materials to finished goods.</li>
-							<li>Receive customer orders and retrieve needed material with forklift.</li>
-							<li>Change out die wheels and setup machine to crimp wires to spec.</li>
-							<li>Thread up looms with crimped wires and weave raw screens performing QA checks throughout weaving process.</li>
-							<li>Maintain open communication while working as a two person team, ensuring a tight tolerance, while trimming raw screens to final size using a hydraulic shear, and bending hooks with 250 ton press brake.</li>
-							<li>Package final product for shipping.</li>
-						</ul>
+						</br>
+						<p>Setup and run machines to create woven screens from steel wire. Full cross-trained,
+							experience includes: Forklift Operation, Material Handling, Quality Control, Guillotine
+							Shear, Brake Press, Shipping and Receiving.</p>
+						</br>
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="row">
 				<div class="job-company">
 					<h3>Vail Resorts</h3>
@@ -117,9 +144,12 @@
 				<div class="ten column">
 					<div class="job-description">
 						<ul>
-							<li>Worked as a team to help train and manage 100-150 lift operators throughout the season, acting as a liaison between management and employees.</li>
-							<li>Responsible for placing and maintaining safety signs, lift tower pads, and boundary fencing.</li>
-							<li>Communicated with front office to redirect personnel, opening and closing lifts, according to need as customer numbers fluctuated.</li>
+							<li>Worked as a team to help train and manage 100-150 lift operators throughout the season,
+								acting as a liaison between management and employees.</li>
+							<li>Responsible for placing and maintaining safety signs, lift tower pads, and boundary
+								fencing.</li>
+							<li>Communicated with front office to redirect personnel, opening and closing lifts,
+								according to need as customer numbers fluctuated.</li>
 						</ul>
 					</div>
 				</div>
@@ -139,7 +169,8 @@
 				<div class="ten column">
 					<div class="job-description">
 						<ul>
-							<li>Provided front line customer service and loss prevention while maintaining the highest departmental customer reviews at the busiest ski resort in North America.</li>
+							<li>Provided front line customer service and loss prevention while maintaining the highest
+								departmental customer reviews at the busiest ski resort in North America.</li>
 							<li>Assisted ticket office resolving problems with customer products.</li>
 							<li>Worked with local PD identifying fraudulent pass use.</li>
 						</ul>
@@ -160,7 +191,8 @@
 				<div class="ten column">
 					<div class="job-description">
 						<ul>
-							<li>Joined the team part way into its first year, helped to address problems resulting from adapting a process developed at mountain resorts to a small midwestern location.</li>
+							<li>Joined the team part way into its first year, helped to address problems resulting from
+								adapting a process developed at mountain resorts to a small midwestern location.</li>
 						</ul>
 					</div>
 				</div>
@@ -181,16 +213,19 @@
 			<div class="row">
 				<div class="one-third column hobby">
 					<h5 class="hobbies-heading">Skiing</h5>
-					<p class="hobbies-description">Spending an afternoon at my local hill, regional weekend trips, or a week in the Rockies.</p>
+					<p class="hobbies-description">Spending an afternoon at my local hill, regional weekend trips, or a
+						week in the Rockies.</p>
 				</div>
 				<div class="one-third column hobby">
 					<h5 class="hobbies-heading">Pickling and Canning</h5>
-					<p class="hobbies-description">Preserving the cucumbers, beets, and garlic from my garden, or making a batch of my highly sought after hot sauce.</p>
+					<p class="hobbies-description">Preserving the cucumbers, beets, and garlic from my garden, or making
+						a batch of my highly sought after hot sauce.</p>
 				</div>
 				<div class="one-third column hobby">
 					<!-- weird font issue with 3D -->
 					<h5 class="hobbies-heading">3D Printing and Electronics</h5>
-					<p class="hobbies-description">From soldering together components in a 3D printed case, for a handheld gaming system, to prototyping a circular sock knitting machine.</p>
+					<p class="hobbies-description">From soldering together components in a 3D printed case, for a
+						handheld gaming system, to prototyping a circular sock knitting machine.</p>
 				</div>
 			</div>
 		</div>
@@ -216,9 +251,10 @@
 					<p class="awards-presenter">Minnesota Public Safety Service Awards Committee</p>
 				</div>
 			</div>
-			</div>
 		</div>
+	</div>
 	</div>
 
 </body>
+
 </html>
