--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div class="row logos">
 				<a href="https://github.com/jtbarclay"><img src="./images/GitHub-Mark-120px-plus.png"
 						alt="github logo"></a>
-				<a href="www.linkedin.com/in/jtbarclay"><img src="./images/LI-In-Bug.png" alt="linkedin logo"></a>
+				<a href="https://www.linkedin.com/in/jtbarclay"><img src="./images/LI-In-Bug.png" alt="linkedin logo"></a>
 			</div>
 		</div>
 	</div>
@@ -81,7 +81,7 @@
 				<div class="one column"></div>
 				<div class="eleven column">
 					<h5 class="job-title">Full Stack Engineering Student</h5>
-					<p>September 2019 - Current</p>
+					<p>September 2019 - January 2020</p>
 				</div>
 			</div>
 			<div class="row">
@@ -107,7 +107,7 @@
 				<div class="one column"></div>
 				<div class="eleven column">
 					<h5 class="job-title">Machine Operator</h5>
-					<p>September 2016 - Current</p>
+					<p>September 2016 - August 2019</p>
 				</div>
 			</div>
 			<div class="row">
